--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <h2>我家的貓咪</h2>
 
     <h3>小町（KOMACHI・♀）</h3>
-    [相片]
+    <link rel="shortcut icon" href="img/komachi.jpg" type="image/x-icon">
     <p>出生不到2個月就到家的貓姐姐。
         從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
         <p>→更多介紹</p>
     <h3>小夏（KONATSU・♀）</h3>
-    [相片]
+    <link rel="shortcut icon" href="img/konatsu.jpg" type="image/x-icon">
     <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
         原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <p>→更多介紹</p>
