--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>劉怡秀的個人履歷</title>
-    <link rel="shortcut icon" href="img/avatar.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/維尼.jpg" type="image/x-icon">
 
     <style>  
         header{
@@ -65,6 +65,7 @@
     <style>
         td{width: 128px;}
     </style>
+    <table border="1">
    <tr>
        <td></td>
        <td><p align="center">星期一</p></td>
@@ -73,6 +74,7 @@
        <td><p align="center">星期四</p></td>
        <td><p align="center">星期五</p></td>
     </tr>
+
    <tr>
        <td><p align="center">第一節</p></td>
        <td></td>
@@ -137,6 +139,7 @@
        <td><p align="center">會計學</p></td>
        <td></td>
     </tr>
+</table>
 </table>
 </body>
 </html>
