--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>劉怡秀的個人履歷</title>
-    <link rel="shortcut icon" href="img/維尼.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/黃金獵犬.jpg" type="image/x-icon">
 
     <style>  
         header{
