--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
         <h2>我的照片:</h2>
         <img src="img/個人照片.jpg" width="480" height="320" alt="秀">
     <hr>
-        <h2>座右銘 : 能吃就是福</h2>
+        <h2>座右銘 : 人生只有一次，不留遺憾。</h2>
     <hr>
 </header>
     
