--- a/external.html
+++ b/external.html
@@ -6,20 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>110111221 劉怡秀</title>
     <link rel="shortcut icon" href="img/avatar.png" type="image/x-icon">
-
-    <style>
-        #contsiner{
-            background-color: rgb(80, 87, 232);
-            margin:0 auto；
-            width:980px；
-        }
-        header{
-            background-color: rgb(231, 153, 153);
-        }
-        nav{
-            background-color: rgb(191, 155, 224);
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
+    
     
 </head>
 
