--- a/inline.html
+++ b/inline.html
@@ -26,7 +26,7 @@
 <body>
 <div id="container">
     <header>
-    <h1>HOMA-NATSU WEB</h1>
+    <h1><span style="font-size: 4em; color: red;">K</span>OMA-NATSU WEB</h1>
     <p>介紹一下我家的偶像貓咪們！</p>
     </header>
     <nav>
@@ -49,20 +49,20 @@
    <p></p> 
     <section> 
         <h3>小町（KOMACHI・♀）</h3>
-        <img src="img/komachi.jpg" alt="這是小町" width:"480" height"320">
+        <link rel="shortcut icon" href="img/komachi.jpg" type="image/x-icon">
         <p>出生不到2個月就到家的貓姐姐。從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
         <p><a href="cats/komachi.html">→更多介紹</a></p>
     </section>
     <section>
         <h3>小夏（KONATSU・♀）</h3>
-        <img src="img/konatsu.jpg" alt="這是小夏" width:"480" height"320">
+        [相片]
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
             原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <p><a href="cats/konatsu.html">→更多介紹</a></p>
     </section>
     <section id="profolio">
         <h2>飼主介紹</h2>
-        <img src="img/avatar.png" alt="飼主" width:"480" height"320">
+        [大頭照]
         <dl>
             <dt>暱稱 ：</dt><dd>roka404</dd>
             <dt>職業 ：</dt><dd>Web相關工作的SOHO族</dd>
@@ -75,3 +75,6 @@
 </div>
 </body>
 </html>
+
+git config --global user.name "Dolaaaaaaa"
+git config --global user.email 110111221@mail.aeust.edu.tw
