--- a/internal.html
+++ b/internal.html
@@ -8,17 +8,14 @@
     <link rel="shortcut icon" href="img/avatar.png" type="image/x-icon">
 
     <style>
-        #contsiner{
-            background-color: rgb(80, 87, 232);
-            margin:0 auto；
-            width:980px；
+        body{
+            background-color: rgb(193, 243, 255);
+            color: blueviolet; 
         }
-        header{
-            background-color: rgb(231, 153, 153);
+        h1{
+            color: brown;
         }
-        nav{
-            background-color: rgb(191, 155, 224);
-        }
+        
     </style>
     
 </head>
