--- a/inline.html
+++ b/inline.html
@@ -11,7 +11,7 @@
         #contsiner{
             background-color: rgb(80, 87, 232);
             margin:0 auto；
-            width:980px；
+            width 980px；
         }
         header{
             background-color: rgb(231, 153, 153);
