--- a/cat.html
+++ b/cat.html
@@ -26,7 +26,7 @@
 <body>
 <div id="container">
     <header>
-    <h1>HOMA-NATSU WEB</h1>
+    <h1>KOMA-NATSU WEB</h1>
     <p>介紹一下我家的偶像貓咪們！</p>
     </header>
     <nav>
