--- a/css_basic.html
+++ b/css_basic.html
@@ -14,10 +14,11 @@
 <body>
 <div id="container">
         <header>
-        <h1>KOMA-NATSU WEB</h1>
+        <h1 class="round">KOMA-NATSU WEB</h1>
         <p>介紹一下我家的偶像貓咪們！</p>
         </header>
         <nav>
+
             <ul>
                 <li><a href="intro">關於本站</a></li>
                 <li><a href="cats">我家的貓咪</a></li>
@@ -34,7 +35,6 @@
             <section id="cats">
                 <h2>我家的貓咪</h2>
         
-       <p></p> 
         <section> 
             <h3>小町（KOMACHI・♀）</h3>
             <img src="img/komachi.jpg" alt="這是小町" width:"480" height"320">
@@ -50,7 +50,7 @@
         </section>
         <section id="profolio">
             <h2>飼主介紹</h2>
-            <img src="img/avatar.png" alt="飼主" width:"480" height"320">
+            <img src="img/avatar.png" alt="飼主" width:"480" height"320" class="round">
             <dl>
                 <dt>暱稱 ：</dt><dd>roka404</dd>
                 <dt>職業 ：</dt><dd>Web相關工作的SOHO族</dd>
