--- a/css_basic.html
+++ b/css_basic.html
@@ -14,7 +14,7 @@
 <body>
 <div id="container">
         <header>
-        <h1 class="round">KOMA-NATSU WEB</h1>
+        <h1 class="round .div_text_shadow">KOMA-NATSU WEB</h1>
         <p>介紹一下我家的偶像貓咪們！</p>
         </header>
         <nav>
