--- a/protopyte.html
+++ b/protopyte.html
@@ -37,23 +37,23 @@
     <hr>
     <h2>興趣</h2>
     <h3>游泳</h3>
-        <img src="img/游泳.jpg" width:"360" height"280" alt="游泳">
+        <img src="img/游泳.jpg" width:"360" height"280">
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
             原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <h3>潛水</h3>
-        <img src="img/潛水.jpg" width:"360" height"280" alt="游泳">
+        <img src="img/潛水.jpg" width:"360" height"280" >
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
             原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <h3>永生花</h3>
-        <img src="img/永生花.jpg" width:"360" height"280" alt="游泳">
+        <img src="img/永生花.jpg" width:"360" height"280">
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
             原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <h3>遛狗</h3>
-        <img src="img/狗.jpg" width:"360" height"280" alt="游泳">
+        <img src="img/狗.jpg" width:"360" height"280">
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
             原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
         <h3>遛兔子</h3>
-        <img src="img/兔子.jpg" width:"360" height"280" alt="游泳">
+        <img src="img/兔子.jpg" width:"360" height"280">
         <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
                 原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
     <h2>證照</h2>
@@ -88,20 +88,11 @@
         <section id="cats">
             <h2>我家的貓咪</h2>
     
-   <p></p> 
+   
     <section> 
-        <h3>小町（KOMACHI・♀）</h3>
-        <link rel="shortcut icon" href="img/komachi.jpg" type="image/x-icon">
-        <p>出生不到2個月就到家的貓姐姐。從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
-        <p><a href="cats/komachi.html">→更多介紹</a></p>
+        
     </section>
-    <section>
-        <h3>小夏（KONATSU・♀）</h3>
-        [相片]
-        <p>為了讓小町有個伴，在1年後抱回來貓妹妹。
-            原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
-        <p><a href="cats/konatsu.html">→更多介紹</a></p>
-    </section>
+   
     <section id="profolio">
         <h2>飼主介紹</h2>
         [大頭照]
