--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
             <dl>
                 <dt>電腦軟體應用丙級<dd> <img src="img/軟丙.jpg" width="480" height="320" > </dd></dt>
                 <dt>TQC-OA 辦公軟體應用類 Excel 2010 實用級<dd> <img src="img/excel.jpg" width="480" height="320" > </dd></dt>
-                <dt>TQC-OA 辦公軟體應用類 Wodr 2010 實用級<dd> <img src="img/word.jpg" width="480" height="320" > </dd></dt>
+                <dt>TQC-OA 辦公軟體應用類 Word 2010 實用級<dd> <img src="img/word.jpg" width="480" height="320" > </dd></dt>
                 <dt>TQC-OA 辦公軟體應用類 PowerPoint 2010 進階級<dd> <img src="img/ppt.jpg" width="480" height="320" > </dd></dt>
                 <dt>TQC-OA 辦公軟體應用類 雲端技術及網路服務 專業級<dd> <img src="img/雲端.jpg" width="480" height="320" > </dd></dt>
                 <dt>TQC-DK 專業知識領域 電子商務概論 專業級<dd> <img src="img/EC.jpg" width="480" height="320" > </dd></dt>
