--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
         <li><a href="internal.html">內部樣式表</a></li>
         <li><a href="external.html">外部樣式表</a></li>
         <li><a href="css_basic.html">基礎樣式表</a></li>
+        <li><a href="protopyte.html">個人網頁</a></li>
+        <li><a href="https://www.figma.com/file/pZxgEumYI6nv949rDUXVCG/%E5%80%8B%E4%BA%BA%E7%B6%B2%E9%A0%81?node-id=0%3A1">figma</a></li>
         
     </ul>
 </body>
