--- a/404.html
+++ b/404.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>請生理假快痛死的我</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="Index.html">首頁</a></li>
+            <li><a href="resume.html">關於我</a></li>
+            <li><a href="http://www.aeust.edu.tw" target="_blank">亞東科技大學</a></li>
+            <li><a href="mailto:110111221@mail.aeust.edu.tw">聯絡我</a></li>
+        </ul>
+
+    </nav>
     <h1>劉怡秀</h1>
     <h2>作品集:</h2>
     <ul>
@@ -17,6 +27,7 @@
         <li><a href="css_basic.html">基礎樣式表</a></li>
         <li><a href="protopyte.html">個人網頁</a></li>
         <li><a href="https://www.figma.com/file/pZxgEumYI6nv949rDUXVCG/%E5%80%8B%E4%BA%BA%E7%B6%B2%E9%A0%81?node-id=0%3A1">figma</a></li>
+        <li><a href="protopyte.html">雙層導覽</a></li>
     </ul>
 </body>
 </html>
