--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         <li><a href="https://www.figma.com/file/pZxgEumYI6nv949rDUXVCG/%E5%80%8B%E4%BA%BA%E7%B6%B2%E9%A0%81?node-id=0%3A1">figma</a></li>
         <li><a href="protopyte.html">雙層導覽</a></li>
         <li><a href="float.html">float排版練習</a></li>
-        <li><a href="flexbox/flexbox.html">flexbox練習</a></li>
+        <li><a href="flexbox.html">flexbox練習</a></li>
     </ul>
 </body>
 </html>
