--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,7 @@
         <li><a href="css_basic.html">基礎樣式表</a></li>
         <li><a href="protopyte.html">個人網頁</a></li>
         <li><a href="https://www.figma.com/file/pZxgEumYI6nv949rDUXVCG/%E5%80%8B%E4%BA%BA%E7%B6%B2%E9%A0%81?node-id=0%3A1">figma</a></li>
+        <li><a href="flexbox.html">flexbox練習</a></li>
     </ul>
 </body>
 </html>
