--- a/flexbox.html
+++ b/flexbox.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">首頁</a></li>
-                <li><a href="resume.html">關於我</a></li>
-                <li><a href="#">亞東</a></li>
-                <li><a href="mailto:110111221@aeust.edu.tw">聯絡我們</a></li>
+                <li><a href="resume.html">關於</a></li>
+                <li><a href="#">更多</a></li>
+                <li><a href="mailto:110111221@aeust.edu.tw">聯絡我</a></li>
             </ul>
         </nav>
 <div class="banner">
@@ -47,12 +47,8 @@
             <li><img src="img/star08.jpg" alt="星空照片" width="300px" height="200px"></li>
             <li><img src="img/star09.jpg" alt="星空照片" width="300px" height="200px"></li>
             <li><img src="img/star10.jpg" alt="星空照片" width="300px" height="200px"></li>
-            <li class="emptyitem"></li>
-            <li class="emptyitem"></li>
-            <li class="emptyitem"></li>
-            <li class="emptyitem"></li>
-            <li class="emptyitem"></li>
-            <li class="emptyitem"></li>
+            
+            
         </ul>
     </div>
     <a href="#photolist"> <i class="fa-solid fa-circle-chevron-up gotop"></i></a>
