--- a/flexbox.html
+++ b/flexbox.html
@@ -47,8 +47,13 @@
             <li><img src="img/star08.jpg" alt="星空照片" width="300px" height="200px"></li>
             <li><img src="img/star09.jpg" alt="星空照片" width="300px" height="200px"></li>
             <li><img src="img/star10.jpg" alt="星空照片" width="300px" height="200px"></li>
-            
-            
+            <li><img src="img/star08.jpg" alt="星空照片" width="300px" height="200px"></li>
+            <li><img src="img/star09.jpg" alt="星空照片" width="300px" height="200px"></li>
+            <li><img src="img/star10.jpg" alt="星空照片" width="300px" height="200px"></li>
+            <li class="emptyitem"></li>
+            <li class="emptyitem"></li>
+            <li class="emptyitem"></li>
+            <li class="emptyitem"></li>
         </ul>
     </div>
     <a href="#photolist"> <i class="fa-solid fa-circle-chevron-up gotop"></i></a>
