--- a/flexbox.html
+++ b/flexbox.html
@@ -51,6 +51,8 @@
             <li><img src="img/star09.jpg" alt="星空照片" width="300px" height="200px"></li>
             <li><img src="img/star10.jpg" alt="星空照片" width="300px" height="200px"></li>
             <li class="emptyitem"></li>
+            <li class="emptyitem"></li>
+            <li class="emptyitem"></li>
            
         </ul>
     </div>
