--- a/tasty-master/menu.html
+++ b/tasty-master/menu.html
@@ -3,27 +3,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Tasty &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>劉怡秀 個人網頁 &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
 
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -67,23 +52,23 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center logo-wrap">
-						<div id="fh5co-logo"><a href="index.html">Tasty<span>.</span></a></div>
-					</div>
-					<div class="col-xs-12 text-center menu-1 menu-wrap">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="menu.html">Menu</a></li>
-							<li class="has-dropdown">
-								<a href="gallery.html">Gallery</a>
-								<ul class="dropdown">
-									<li><a href="#">Events</a></li>
-									<li><a href="#">Food</a></li>
-									<li><a href="#">Coffees</a></li>
-								</ul>
-							</li>
-							<li><a href="reservation.html">Reservation</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+					    <div id="fh5co-logo"><a href="index.html">劉怡秀 個人網頁<span>.</span></a></div>
+                    </div>
+                    <div class="col-xs-12 text-center menu-1 menu-wrap">
+                        <ul>
+                            <li class="active"><a href="index.html">期中figma</a></li>
+                            <li><a href="menu.html">我的證照</a></li>
+                            <li class="has-dropdown">
+                                <a href="gallery.html">我的興趣</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">FOOD</a></li>
+                                    <li><a href="#">TOY</a></li>
+                                    <li><a href="#">ANIMAL</a></li>
+                                    <li><a href="#">NATURE</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="reservation.html">認識家扶</a></li>
+                            <li><a href="about.html">自我介紹</a></li>
 						</ul>
 					</div>
 				</div>
@@ -92,15 +77,14 @@
 		<!-- </div> -->
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image: url(images/hero_1.jpeg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image: url(images/封底.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<h1>See <em>Our</em> Menu</h1>
-							<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<h1>See <em>My</em> 證照</h1>
 						</div>
 					</div>
 				</div>
@@ -108,156 +92,131 @@
 		</div>
 	</header>
 
-	<div id="fh5co-featured-menu" class="fh5co-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 fh5co-heading animate-box">
-					<h2>Our Delicous Menu</h2>
-					<div class="row">
-						<div class="col-md-6">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab debitis sit itaque totam, a maiores nihil, nulla magnam porro minima officiis! Doloribus aliquam voluptates corporis et tempora consequuntur ipsam, itaque, nesciunt similique commodi omnis. Ad magni perspiciatis, voluptatum repellat.</p>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-item-wrap">
-					<div class="fh5co-item animate-box">
-						<img src="images/gallery_1.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Bake Potato Pizza</h3>
-						<span class="fh5co-price">$20<sup>.50</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-					<div class="fh5co-item animate-box">
-						<img src="images/gallery_2.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Bake Potato Pizza</h3>
-						<span class="fh5co-price">$20<sup>.50</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-item-wrap">
-					<div class="fh5co-item margin_top animate-box">
-						<img src="images/gallery_3.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Salted Fried Chicken</h3>
-						<span class="fh5co-price">$19<sup>.00</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-					<div class="fh5co-item animate-box">
-						<img src="images/gallery_4.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Bake Potato Pizza</h3>
-						<span class="fh5co-price">$20<sup>.50</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-				</div>
-				<div class="clearfix visible-sm-block visible-xs-block"></div>
-				<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-item-wrap">
-					<div class="fh5co-item animate-box">
-						<img src="images/gallery_5.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Italian Sauce Mushroom</h3>
-						<span class="fh5co-price">$17<sup>.99</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-					<div class="fh5co-item animate-box">
-						<img src="images/gallery_6.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Bake Potato Pizza</h3>
-						<span class="fh5co-price">$20<sup>.50</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-item-wrap">
-					<div class="fh5co-item margin_top animate-box">
-						<img src="images/gallery_7.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Fried Potato w/ Garlic</h3>
-						<span class="fh5co-price">$22<sup>.50</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-					<div class="fh5co-item animate-box">
-						<img src="images/gallery_8.jpeg" class="img-responsive" alt="Free Restaurant Bootstrap Website Template by FreeHTML5.co">
-						<h3>Bake Potato Pizza</h3>
-						<span class="fh5co-price">$20<sup>.50</sup></span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nihil cupiditate ut vero alias quaerat inventore molestias vel suscipit explicabo.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-featured-testimony" class="fh5co-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 fh5co-heading animate-box">
-					<h2>Testimony</h2>
-					<div class="row">
-						<div class="col-md-6">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab debitis sit itaque totam, a maiores nihil, nulla magnam porro minima officiis! Doloribus aliquam voluptates corporis et tempora consequuntur ipsam, itaque, nesciunt similique commodi omnis.</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-5 animate-box img-to-responsive">
-						<img src="images/person_1.jpg" alt="">
-				</div>
-				<div class="col-md-7 animate-box">
-					<blockquote>
-						<p> &ldquo; Quantum ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ab debitis sit itaque totam, a maiores nihil, nulla magnam porro minima officiis! Doloribus aliquam voluptates corporis et tempora consequuntur ipsam. &rdquo;</p>
-						<p class="author"><cite>&mdash; Jane Smith</cite></p>
-					</blockquote>
-				</div>
-			</div>
-		</div>
-	</div>
+	
+	<div id="fh5co-blog" class="fh5co-section">
+        <div class="container">
+            <div class="row animate-box">
+                <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                    <h2>證照集</h2>
+                    <p>我目前擁有的6張證照</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="fh5co-blog animate-box">
+                        <a href="#" class="blog-bg" style="background-image: url(images/EC.jpg);"></a>
+                        <div class="blog-text">
+                            <span class="posted_on">Feb. 15th 2016</span>
+                            <h3><a href="#">電子商務概論 專業級</a></h3>
+                            <p>TQC-DK 專業知識領域</p>
+                            <ul class="stuff">
+                                <li><i class="icon-heart2"></i>1.2K</li>
+                                <li><i class="icon-eye2"></i>2K</li>
+                                <li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+                            </ul>
+                        </div> 
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="fh5co-blog animate-box">
+                        <a href="#" class="blog-bg" style="background-image: url(images/excel.jpg);"></a>
+                        <div class="blog-text">
+                            <span class="posted_on">Feb. 15th 2016</span>
+                            <h3><a href="#">Excel 2010 實用級</a></h3>
+                            <p>TQC-OA 辦公軟體應用類</p>
+                            <ul class="stuff">
+                                <li><i class="icon-heart2"></i>1.2K</li>
+                                <li><i class="icon-eye2"></i>2K</li>
+                                <li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+                            </ul>
+                        </div> 
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="fh5co-blog animate-box">
+                        <a href="#" class="blog-bg" style="background-image: url(images/word.jpg);"></a>
+                        <div class="blog-text">
+                            <span class="posted_on">Feb. 15th 2016</span>
+                            <h3><a href="#">Word 2010 實用級</a></h3>
+                            <p>TQC-OA 辦公軟體應用類</p>
+                            <ul class="stuff">
+                                <li><i class="icon-heart2"></i>1.2K</li>
+                                <li><i class="icon-eye2"></i>2K</li>
+                                <li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+                            </ul>
+                        </div> 
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="fh5co-blog animate-box">
+                        <a href="#" class="blog-bg" style="background-image: url(images/ppt.jpg);"></a>
+                        <div class="blog-text">
+                            <span class="posted_on">Feb. 15th 2016</span>
+                            <h3><a href="#">PowerPoint 2010 進階級</a></h3>
+                            <p>TQC-OA 辦公軟體應用類</p>
+                            <ul class="stuff">
+                                <li><i class="icon-heart2"></i>1.2K</li>
+                                <li><i class="icon-eye2"></i>2K</li>
+                                <li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+                            </ul>
+                        </div> 
+                    </div>
+                </div>
+				<div class="col-md-4">
+                    <div class="fh5co-blog animate-box">
+                        <a href="#" class="blog-bg" style="background-image: url(images/雲端.jpg);"></a>
+                        <div class="blog-text">
+                            <span class="posted_on">Feb. 15th 2016</span>
+                            <h3><a href="#">雲端技術及網路服務 專業級</a></h3>
+                            <p>TQC-OA 辦公軟體應用類</p>
+                            <ul class="stuff">
+                                <li><i class="icon-heart2"></i>1.2K</li>
+                                <li><i class="icon-eye2"></i>2K</li>
+                                <li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+                            </ul>
+                        </div> 
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="fh5co-blog animate-box">
+                        <a href="#" class="blog-bg" style="background-image: url(images/軟丙.jpg);"></a>
+                        <div class="blog-text">
+                            <span class="posted_on">Feb. 15th 2016</span>
+                            <h3><a href="#">電腦軟體應用丙級</a></h3>
+                            <p> </p>
+                            <ul class="stuff">
+                                <li><i class="icon-heart2"></i>1.2K</li>
+                                <li><i class="icon-eye2"></i>2K</li>
+                                <li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+                            </ul>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	
 
 	
-	<div id="fh5co-started" class="fh5co-section animate-box" style="background-image: url(images/hero_1.jpeg);" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Book a Table</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae enim quae vitae cupiditate, sequi quam ea id dolor reiciendis consectetur repudiandae. Rem quam, repellendus veniam ipsa fuga maxime odio? Eaque!</p>
-					<p><a href="reservation.html" class="btn btn-primary btn-outline">Book Now</a></p>
-				</div>
+	<div id="fh5co-started" class="fh5co-section animate-box" style="background-image: url(images/green.jpg);"
+	data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<h2>更多資訊</h2>
+				<p>有相關問題請來信!</p>
+				<p><a href="mailto:110111221@mail.aeust.edu.tw" class="btn btn-primary btn-outline">Contact Me</a>
+				</p>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<footer id="fh5co-footer" role="contentinfo" class="fh5co-section">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-4 fh5co-widget">
-					<h4>Tasty</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-				</div>
-				<div class="col-md-2 col-md-push-1 fh5co-widget">
-					<h4>Links</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-md-push-1 fh5co-widget">
-					<h4>Categories</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Landing Page</a></li>
-						<li><a href="#">Real Estate</a></li>
-						<li><a href="#">Personal</a></li>
-						<li><a href="#">Business</a></li>
-						<li><a href="#">e-Commerce</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-4 col-md-push-1 fh5co-widget">
-					<h4>Contact Information</h4>
-					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://https://freehtml5.co">freehtml5.co</a></li>
-					</ul>
-				</div>
-
+				
 			</div>
 
 			<div class="row copyright">
