--- a/tasty-master/index.html
+++ b/tasty-master/index.html
@@ -102,7 +102,7 @@
                 <div class="col-md-5 col-md-push-1 animate-box">
                     <div class="section-heading">
                         <h2>期中個人網頁Figma</h2>
-                        <p>先來看看和期中網頁有什麼の差異</p>
+                        <p>先來回顧~看看和期末網頁有什麼の差異</p>
                         <p><a href="https://www.figma.com/file/pZxgEumYI6nv949rDUXVCG/%E5%80%8B%E4%BA%BA%E7%B6%B2%E9%A0%81" class="btn btn-primary btn-outline">Go to Figma</a></p>
                     </div>
                 </div>
@@ -114,10 +114,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 fh5co-heading animate-box">
-                    <h2>個人網頁做了什麼改變？</h2>
+                    <h2>期中的個人網頁</h2>
                     <div class="row">
                         <div class="col-md-6">
-                            <p>一種是用比較單純、基礎的 <br>  期末套用學長教的免費模板，以成熟的暗色系為底，減輕視覺的負擔，圖片居多、清晰，加上文字註解、明暸。</p>
+                            <p>以亮色系為主，鵝黃色為底 <br>優點是一頁就可以很快滑到底看完全部的東西，可能資料比較少覺得還可以，一旦資料比較多要展示的話，就會很不方便檢視。  </p>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     <h2>個人網頁做了什麼改變？</h2>
                     <div class="row">
                         <div class="col-md-6">
-                            <p>一種是用比較單純、基礎的 <br>  期末套用學長教的免費模板，以成熟的暗色系為底，減輕視覺的負擔，圖片居多、清晰，加上文字註解、明暸。</p>
+                            <p>選了一種是用比較暗色系、減輕視覺的負擔 <br>  期末網頁套用了學長教的網路上找的免費模板，原本以圖片居多、清晰，加上文字註解、明暸，喜歡。</p>
                         </div>
                     </div>
                 </div>
